<resources>
    <string name="app_name">Roaure</string>
    <string name="action_settings">Settings</string>
    <string name="download_speed">Download Speed</string>
    <string name="bad_count">Bad Count</string>
    <string name="reboot_required">Reboot Required</string>
    <string name="nav_graph_metrics_fragment_label">Metrics</string>
    <string name="stop_monitor">Stop monitor</string>
    <string name="start_monitor">Start monitor</string>
    <string name="no_value_present">…</string>
    <string name="nav_graph_settings_fragment_label">Settings</string>
    <string name="loading">Loading…</string>
    <string name="action_monitor_conf">Monitor Config</string>
    <string name="action_iperf_server_conf">IPERF-Server Config</string>
    <string name="action_router_conf">Router Config</string>
    <string name="go_to_schedules">Schedules</string>
    <string name="nav_graph_iperf_server_conf_fragment_label">IPERF-Server Conf</string>
    <string name="nav_graph_monitor_conf_fragment_label">Monitor Conf</string>
    <string name="nav_graph_router_conf_fragment_label">Router Conf</string>
    <string name="nav_graph_schedules_fragment_label">Schedules</string>
    <string name="nav_graph_schedule_fragment_label">Schedule</string>
    <string name="text_input_hint_host">Host</string>
    <string name="text_input_hint_port">Port</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="text_input_hint_username">Username</string>
    <string name="text_input_hint_password">Password</string>
    <string name="poll_interval">Poll interval</string>
    <string name="text_input_hint_download_threshold">Download threshold</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="text_input_hint_bad_count_limit">Bad count limit</string>
    <string name="starts_at">Starts At</string>
    <string name="ends_at">Ends At</string>
    <string name="weekdays">Weekdays</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="schedule_enabled">Enabled</string>
    <string name="schedule_disabled">Disabled</string>
    <string name="title">Title</string>
    <string name="add_new_schedule">Add new</string>
    <string name="refresh">Refresh</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="backend_host">backend_host</string>
    <string name="backend_host_default">orangepi3</string>
    <string name="backend_port">backend_port</string>
    <string name="reboot">Reboot</string>
</resources>