<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="re.greateapot.roaure.ui.main.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_monitor_conf"
        android:orderInCategory="10"
        android:title="@string/action_monitor_conf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_iperf_server_conf"
        android:orderInCategory="11"
        android:title="@string/action_iperf_server_conf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_router_conf"
        android:orderInCategory="12"
        android:title="@string/action_router_conf"
        app:showAsAction="never" />
</menu>