<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/schedule_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/title"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starts_at" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/schedule_starts_at_hours"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:hint="@string/hours">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/schedule_starts_at_minutes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:hint="@string/minutes">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ends_at" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/schedule_ends_at_hours"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:hint="@string/hours">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/schedule_ends_at_minutes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:hint="@string/minutes">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekdays" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_monday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_tuesday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_wednesday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_thursday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_friday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_saturday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

                <RadioButton
                    android:id="@+id/schedule_weekdays_sunday"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/list_view_schedules_row_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/toggle_button_color"
                    android:text="@string/schedule_disabled"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/reset" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/save" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>