<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_view_schedules_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/list_view_schedules_row_title"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/list_view_schedules_row_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/list_view_schedules_row_weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- TODO: Later, this button may be REAL toggle button, but now... It's just indicator -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/list_view_schedules_row_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/toggle_button_color"
                android:enabled="false"
                android:text="@string/loading"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/list_view_schedules_row_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/list_view_schedules_row_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>